src: make coming soon design available in tablets

--- a/web/app/themes/kim-theme/resources/assets/styles/layouts/_pages.scss
+++ b/web/app/themes/kim-theme/resources/assets/styles/layouts/_pages.scss
@@ -98,7 +98,7 @@ body {
   }
 }
 
-@include media-breakpoint-down(sm) {
+@include media-breakpoint-down(md) {
   body {
     background: {
       position: 37% center;
