--- a/web/app/themes/kim-theme/resources/assets/styles/layouts/_pages.scss
+++ b/web/app/themes/kim-theme/resources/assets/styles/layouts/_pages.scss
@@ -133,7 +133,10 @@ body {
 
     .info {
       position: absolute;
+      top: auto;
+      right: 0;
       bottom: 7.5rem;
+      left: 0;
 
       h3 {
         font: {
