src: kim theme progress

--- a/web/app/themes/kim-theme/resources/assets/styles/common/_variables.scss
+++ b/web/app/themes/kim-theme/resources/assets/styles/common/_variables.scss
@@ -1,1 +1,22 @@
+// Fonts
+$fa-font-path: '~font-awesome/fonts';
+$heading-font: 'Bahiana', sans-serif;
+$paragraph-font: 'Arial', serif;
+$system-font: 'Montserrat', sans-serif;
+$secondary-font: 'Arial', cursive;
+
+// Color Palette
+$gold: #ecdaa9;
+$white: #fff;
+$black: #000;
+$dark-gray: #1e1e1e;
+$light-gray: #ccc;
+
+// Theme Coloring
+$brand-primary: $gold;
+$main-background: $black;
+$secondary-background: $dark-gray;
+
+$heading-color: $white;
+$paragraph-color: $white;
 
