--- a/web/app/themes/kim-theme/resources/assets/styles/layouts/_pages.scss
+++ b/web/app/themes/kim-theme/resources/assets/styles/layouts/_pages.scss
@@ -1,4 +1,4 @@
-body {
+body.template-coming-soon {
   height: 100vh;
   background: {
     image: url("/app/uploads/2018/01/IMG_7984.jpg");
@@ -6,141 +6,75 @@ body {
     size: cover;
     position: left center;
   }
-}
 
-.overlay {
-  z-index: 98;
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background: {
-    color: transparentize($white, 0.3);
-  }
-}
-
-.splash {
-  z-index: 100;
-  position: fixed;
-  top: 35%;
-  left: 25%;
-  right: auto;
-  bottom: auto;
-
-  h3 {
-    color: $black;
-    font: {
-      family: "mr-eaves-xl-modern", sans-serif;
-      weight: bold;
-      size: 2.5rem;
-    }
-  }
-
-  .site-logo {
-    max-width: 100%;
-
-    img {
-      max-width: 13rem;
-    }
-  }
-}
-
-.ease-effect {
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -ms-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-}
-
-.social-icons {
-  .icon {
-    @extend .ease-effect;
-    $size: 35px;
-
-    width: $size;
-    height: $size;
-    border: {
-      radius: $size/2;
-    }
+  .overlay {
+    z-index: 98;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     background: {
+      color: transparentize($white, 0.3);
+    }
+  }
+
+  .splash {
+    z-index: 100;
+    position: fixed;
+    top: 35%;
+    left: 25%;
+    right: auto;
+    bottom: auto;
+
+    h3 {
       color: $black;
-    }
-
-    border: {
-      color: $gray-300;
-      width: 1px;
-      style: solid;
-    }
-
-    i,
-    a {
-      @extend .ease-effect;
-
-      color: $gray-300;
-      line-height: $size;
-    }
-
-    &:hover {
-      background: {
-        color: $gray-300;
+      font: {
+        family: "mr-eaves-xl-modern", sans-serif;
+        weight: bold;
+        size: 2.5rem;
       }
-      border: {
-        color: $black;
-      }
+    }
 
-      i,
-      a {
-        color: $black;
+    .site-logo {
+      max-width: 100%;
+
+      img {
+        max-width: 13rem;
       }
     }
   }
 }
 
 @include media-breakpoint-down(md) {
-  body {
+  body.template-coming-soon {
     background: {
       position: 37% center;
     }
-  }
 
-  .social-icons {
-    .icon {
-      border: {
-        width: 0;
-      }
-
-      i {
-        font: {
-          size: 1.5rem;
-        }
-      }
-    }
-  }
-
-  .splash {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-
-    .site-logo {
-      margin: 2rem auto 0;
-      max-width: 5rem;
-    }
-
-    .info {
-      position: absolute;
-      top: auto;
-      right: 0;
-      bottom: 7.5rem;
+    .splash {
+      position: fixed;
+      top: 0;
       left: 0;
+      right: 0;
+      bottom: 0;
 
-      h3 {
-        font: {
-          size: 2rem;
+      .site-logo {
+        margin: 2rem auto 0;
+        max-width: 5rem;
+      }
+
+      .info {
+        position: absolute;
+        top: auto;
+        right: 0;
+        bottom: 7.5rem;
+        left: 0;
+
+        h3 {
+          font: {
+            size: 2rem;
+          }
         }
       }
     }
