--- a/web/app/themes/kim-theme/resources/assets/styles/main.scss
+++ b/web/app/themes/kim-theme/resources/assets/styles/main.scss
@@ -13,13 +13,6 @@
 
 /** Import theme styles */
 @import "common/global";
-@import "components/buttons";
-@import "components/comments";
-@import "components/forms";
-@import "components/wp-classes";
-@import "layouts/header";
-@import "layouts/sidebar";
-@import "layouts/footer";
-@import "layouts/pages";
-@import "layouts/posts";
-@import "layouts/tinymce";
+@import "common/helpers";
+@import "components/*";
+@import "layouts/*";
