--- a/web/app/themes/kim-theme/resources/assets/styles/components/_featured.scss
+++ b/web/app/themes/kim-theme/resources/assets/styles/components/_featured.scss
@@ -42,11 +42,12 @@ section.featured {
       h2 {
         @extend .ease-effect;
 
+        color: $white;
         margin: 0;
         font: {
           family: $secondary-font;
           size: 4rem;
-          weight: 200;
+          weight: bold;
         }
 
         &:hover {
