src: lookbooks mobile layout improvements

--- a/web/app/themes/kim-theme/resources/assets/styles/pages/_lookbooks.scss
+++ b/web/app/themes/kim-theme/resources/assets/styles/pages/_lookbooks.scss
@@ -85,4 +85,16 @@ body.template-lookbooks {
       }
     }
   }
+
+  @include media-breakpoint-down(md) {
+    article.lookbook {
+      .lookbook-front {
+        .info {
+          button {
+            width: 100%;
+          }
+        }
+      }
+    }
+  }
 }
