--- a/web/app/themes/kim-theme/resources/assets/styles/pages/_product.scss
+++ b/web/app/themes/kim-theme/resources/assets/styles/pages/_product.scss
@@ -40,6 +40,12 @@ body.woocommerce {
   }
 
   &.single-product {
+    .contact-button {
+      .btn {
+        display: block;
+      }
+    }
+
     .related.products {
       clear: both;
       margin: {
