--- a/web/app/themes/kim-theme/resources/assets/styles/pages/_common.scss
+++ b/web/app/themes/kim-theme/resources/assets/styles/pages/_common.scss
@@ -26,3 +26,15 @@ body {
     }
   }
 }
+
+@include media-breakpoint-down(md) {
+  body {
+    &.woocommerce {
+      .wrap {
+        margin: {
+          top: 5rem;
+        }
+      }
+    }
+  }
+}
