fix: make lookbook cover image clickable

--- a/web/app/themes/kim-theme/resources/assets/styles/pages/_lookbooks.scss
+++ b/web/app/themes/kim-theme/resources/assets/styles/pages/_lookbooks.scss
@@ -53,6 +53,10 @@ body.template-lookbooks {
           }
         }
       }
+
+      .image {
+        cursor: pointer;
+      }
     }
 
     .lookbook-back {
