src: update brand primary color

--- a/web/app/themes/kim-theme/resources/assets/styles/common/_variables.scss
+++ b/web/app/themes/kim-theme/resources/assets/styles/common/_variables.scss
@@ -47,7 +47,7 @@ $black: #000;
 $white: #fff;
 
 // Theme Coloring
-$brand-primary: $navy;
+$brand-primary: #334a57;
 $main-background: $white;
 $secondary-background: $navy;
 
